--- a/src/app/vm/vm-creation/vm-creation.component.html
+++ b/src/app/vm/vm-creation/vm-creation.component.html
@@ -117,6 +117,11 @@
                     (changed)="diskOfferingChange.emit($event)"
                   ></cs-disk-offering-selector>
                 </div>
+
+                <cs-error-message *ngIf="!isDiskOfferingAvailableByResources">
+                  {{ 'ERRORS.VOLUME.VOLUME_RESOURCES_LIMIT_EXCEEDED' | translate }}
+                </cs-error-message>
+
                 <div *ngIf="showResizeSlider()">
                   <cs-slider
                     name="rds"
@@ -128,9 +133,6 @@
                     [units]="'UNITS.GB' | translate"
                   ></cs-slider>
                 </div>
-                <span *ngIf="!isDiskOfferingAvailableByResources" class="error-message">
-                  {{ 'ERRORS.VOLUME.VOLUME_RESOURCES_LIMIT_EXCEEDED' | translate }}
-                </span>
               </div>
             </mat-tab>
 
