feat(vm-snapsots): add ability to filter and grouping VM snapshots

--- a/src/app/snapshot/snapshots-page/snapshot-filter/snapshot-filter.component.html
+++ b/src/app/snapshot/snapshots-page/snapshot-filter/snapshot-filter.component.html
@@ -61,7 +61,7 @@
       (selectionChange)="selectedGroupingsChange.emit($event.value)"
     >
       <ng-container *ngFor="let g of availableGroupings">
-        <mat-option *ngIf="!(g.hidden())" [value]="g">
+        <mat-option *ngIf="!(g.enabled())" [value]="g">
           {{ g.label | translate }}
         </mat-option>
       </ng-container>
