--- a/src/app/shared/components/fab/fab.component.scss
+++ b/src/app/shared/components/fab/fab.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../style/__variables';
+@import '../../../../style/app';
 
 :host {
   position: fixed;
@@ -9,51 +10,10 @@
   width: 50px;
 }
 
-.mat-fab {
-  width: 50px;
-  height: 50px;
-}
-
-// original fab size = 56px
-// original padding = 16px
-// original line height = 24px
-// new fab size = 50px
-// set new values to (50 * 56 / original_size) to scale down
-
-$mat-fab-ratio: 50 / 56;
-
 /deep/ .mat-fab {
-  width: 50px;
-  height: 50px;
-
-  & .mat-button-wrapper {
-    padding: $mat-fab-ratio * 16px 0;
-    line-height: $mat-fab-ratio * 24px;
-  }
-
-  & .mat-icon {
-    width: $mat-fab-ratio * 24px;
-    height: $mat-fab-ratio * 24px;
-    line-height: $mat-fab-ratio * 24px;
-    font-size: $mat-fab-ratio * 24px;
-  }
+  @include mat-fab-shrunk;
 }
-
-$mat-mini-fab-ratio: 36 / 40;
 
 /deep/ .mat-mini-fab {
-  width: 36px;
-  height: 36px;
-
-  & .mat-button-wrapper {
-    padding: $mat-mini-fab-ratio * 8px 0;
-    line-height: $mat-mini-fab-ratio * 24px;
-  }
-
-  & .mat-icon {
-    width: $mat-mini-fab-ratio * 24px;
-    height: $mat-mini-fab-ratio * 24px;
-    line-height: $mat-mini-fab-ratio * 24px;
-    font-size: $mat-mini-fab-ratio * 24px;
-  }
+  @include mat-mini-fab-shrunk;
 }
