refactor mat fab styles

--- a/src/app/shared/components/fab/fab.component.scss
+++ b/src/app/shared/components/fab/fab.component.scss
@@ -1,5 +1,5 @@
 @import '../../../../style/__variables';
-@import '../../../../style/app';
+@import '../../../../style/mat-fab-resize';
 
 :host {
   position: fixed;
