--- a/src/app/vm-logs/vm-logs/vm-logs.component.scss
+++ b/src/app/vm-logs/vm-logs/vm-logs.component.scss
@@ -1,5 +1,5 @@
 @import '../../../style/_variables';
-@import '../../../style/app';
+@import '../../../style/mat-fab-resize';
 
 .fab {
   transition: margin 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
