--- a/src/app/snapshot/containers/snapshots-page/snapshots-page.component.html
+++ b/src/app/snapshot/containers/snapshots-page/snapshots-page.component.html
@@ -47,6 +47,12 @@
     </ng-template>
   </ng-container>
 
+  <ng-container *ngIf cs-sidebar>
+    <cs-sidebar [isOpen]="listService?.hasSelected()">
+      <router-outlet></router-outlet>
+    </cs-sidebar>
+  </ng-container>
+
   <ng-container cs-sidebar>
     <cs-sidebar [isOpen]="listService?.hasSelected()">
       <router-outlet></router-outlet>
