--- a/src/app/vm-logs/vm-logs/vm-logs.component.scss
+++ b/src/app/vm-logs/vm-logs/vm-logs.component.scss
@@ -1,4 +1,5 @@
 @import '../../../style/_variables';
+@import '../../../style/mat-fab-resize';
 
 .fab {
   transition: margin 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -8,13 +9,4 @@
   z-index: 99;
   height: 50px;
   width: 50px;
-}
-
-.mat-fab {
-  width: 50px;
-  height: 50px;
-}
-
-/deep/ .mat-fab .mat-button-wrapper {
-  padding: 14px 0 !important;
 }
