fix(sidebar): resize bugs

--- a/src/app/security-group/sg-sidebar/security-group-sidebar.component.html
+++ b/src/app/security-group/sg-sidebar/security-group-sidebar.component.html
@@ -8,7 +8,12 @@
     </button>
   </div>
 
-  <nav mat-tab-nav-bar *ngIf="!isPredefinedTemplate">
+  <nav
+    #tabs
+    [csSidebarTabNav]="tabs"
+    mat-tab-nav-bar
+    *ngIf="!isPredefinedTemplate"
+  >
     <a
       matTabLink
       [routerLink]="['./sg']"
