--- a/src/app/template/template-sidebar/base-template-sidebar.component.scss
+++ b/src/app/template/template-sidebar/base-template-sidebar.component.scss
@@ -21,7 +21,6 @@ mat-icon {
 
 .title-container {
   display: flex;
-  justify-content: start;
-  width: 90%;
+  justify-content: space-between;
   align-items: center;
 }
