feat(instance-groups): migrate from tags to native instance groups

--- a/src/app/vm/vm-creation/vm-creation.component.html
+++ b/src/app/vm/vm-creation/vm-creation.component.html
@@ -168,13 +168,13 @@
                       matInput
                       [matAutocomplete]="instanceGroups"
                       [placeholder]="'VM_PAGE.VM_CREATION.NO_GROUP' | translate"
-                      [ngModel]="vmCreationState.instanceGroup?.name"
+                      [ngModel]="vmCreationState.instanceGroup"
                       (ngModelChange)="changeInstanceGroup($event)"
                     >
                   </mat-form-field>
                   <mat-autocomplete #instanceGroups>
                     <mat-option
-                      *ngFor="let group of (visibleInstanceGroups || instanceGroupList)"
+                      *ngFor="let group of (visibleInstanceGroups || instanceGroupNames)"
                       [value]="group.name"
                     >
                       {{ group.name }}
