--- a/src/app/vm/vm-sidebar/instance-group-selector/instance-group-selector.component.html
+++ b/src/app/vm/vm-sidebar/instance-group-selector/instance-group-selector.component.html
@@ -2,20 +2,17 @@
   <ng-container *ngIf="!loading">
     <cs-create-update-delete-dialog
       [enableAssign]="groupNames?.length"
-      [enableRemove]="!!groupName"
-      [defaultValue]="groupName"
+      [defaultValue]="vm?.group"
       [options]="groupNames"
       [assignLabel]="'VM_PAGE.VM_DETAILS.INSTANCE_GROUP.CHOOSE_EXISTING_GROUP'"
       [createLabel]="'VM_PAGE.VM_DETAILS.INSTANCE_GROUP.CREATE_NEW_GROUP'"
       [maxLength]="255"
-      [removeLabel]="'VM_PAGE.VM_DETAILS.INSTANCE_GROUP.REMOVE_FROM_GROUP'"
       [selectPlaceholder]="'VM_PAGE.VM_DETAILS.INSTANCE_GROUP.CHOOSE_GROUP'"
       [textFieldPlaceholder]="'VM_PAGE.VM_DETAILS.INSTANCE_GROUP.ENTER_GROUP_NAME'"
       [title]="'VM_PAGE.VM_DETAILS.INSTANCE_GROUP.CHANGE_INSTANCE_GROUP'"
       (assigned)="changeGroup($event)"
       (canceled)="onCancel()"
       (created)="changeGroup($event)"
-      (removed)="removeGroup()"
     ></cs-create-update-delete-dialog>
   </ng-container>
 </div>
