--- a/src/app/vm-logs/vm-logs-filter/vm-logs-filter.component.html
+++ b/src/app/vm-logs/vm-logs-filter/vm-logs-filter.component.html
@@ -5,6 +5,7 @@
       [placeholder]="'LOGS_PAGE.FILTERS.SELECT_ACCOUNTS' | translate"
       [ngModel]="selectedAccountIds"
       (selectionChange)="accountsChanged.emit($event.value)"
+      [disabled]="isAutoUpdateEnabled"
     >
       <mat-option
         *ngFor="let account of accounts"
@@ -19,6 +20,7 @@
       [placeholder]="'LOGS_PAGE.FILTERS.SELECT_VM' | translate"
       [ngModel]="selectedVmId"
       (selectionChange)="vmChanged.emit($event.value)"
+      [disabled]="isAutoUpdateEnabled"
     >
       <mat-option
         *ngFor="let vm of vms"
@@ -34,6 +36,7 @@
       [placeholder]="'LOGS_PAGE.FILTERS.LOG_FILE' | translate"
       [ngModel]="selectedLogFile"
       (selectionChange)="logFileChanged.emit($event.value)"
+      [disabled]="isAutoUpdateEnabled"
     >
       <mat-option [value]="null">
         {{ 'LOGS_PAGE.FILTERS.LOG_FILE_NOT_SELECTED' | translate }}
@@ -102,6 +105,7 @@
       [ngModel]="search"
       (ngModelChange)="searchChanged.emit($event)"
       [placeholder]="'LOGS_PAGE.FILTERS.SEARCH' | translate"
+      [disabled]="isAutoUpdateEnabled"
     >
   </mat-form-field>
 
