--- a/src/app/snapshot/components/vm-snapshot-list-view/vm-snapshot-list-view.component.html
+++ b/src/app/snapshot/components/vm-snapshot-list-view/vm-snapshot-list-view.component.html
@@ -1,4 +1,8 @@
-<mat-list-item  class="entity-list-item">
+<mat-list-item
+  class="entity-list-item"
+  [class.card-selected]="isSelected(item)"
+  (click)="onSelect($event)"
+>
   <cs-square-state-indicator
     class="entity-list-item-status-indicator"
     [state]="item.state.toLowerCase()"
