--- a/src/app/snapshot/containers/snapshots-page/snapshots-page.component.html
+++ b/src/app/snapshot/containers/snapshots-page/snapshots-page.component.html
@@ -35,6 +35,8 @@
             class="padding"
             [list]="vmSnapshots"
             [component]="vmSnapshotComponent"
+            [dynamicInputs]="inputs"
+            [dynamicOutputs]="outputs"
             cs-list
           ></cs-grouped-list>
         </ng-container>
