--- a/src/app/vm/vm-filter/vm-filter.component.html
+++ b/src/app/vm/vm-filter/vm-filter.component.html
@@ -35,9 +35,9 @@
       </mat-option>
       <mat-option
         *ngFor="let group of groups"
-        [value]="group.name"
+        [value]="group"
       >
-        {{ group.name }}
+        {{ group }}
       </mat-option>
     </mat-select>
   </mat-form-field>
