--- a/src/app/ssh-keys/ssh-key-list-item/card-item/ssh-key-card-item.component.html
+++ b/src/app/ssh-keys/ssh-key-list-item/card-item/ssh-key-card-item.component.html
@@ -1,4 +1,4 @@
-<mat-card (click)="onClicked($event)" class="entity-card">
+<mat-card (click)="onClicked()" class="entity-card">
 
   <mat-card-header class="entity-card-header">
     <div class="entity-card-thumbnail">
@@ -7,7 +7,7 @@
     <mat-card-title [matTooltip]="item.name" class="entity-card-title">
       {{ item.name }}
     </mat-card-title>
-    <button  mat-icon-button [matMenuTriggerFor]="actionsMenu" class="entity-card-menu">
+    <button  mat-icon-button [matMenuTriggerFor]="actionsMenu" class="entity-card-menu" (click)="$event.stopPropagation()">
       <mat-icon class="mdi-dots-vertical"></mat-icon>
     </button>
   </mat-card-header>
