--- a/src/app/template/template/row-item/template-row-item.component.html
+++ b/src/app/template/template/row-item/template-row-item.component.html
@@ -1,5 +1,5 @@
 <mat-list-item
-  (click)="handleClick($event)"
+  (click)="handleClick()"
   [class.card-selected]="isSelected && isSelected(item)"
   class="entity-list-item"
 >
@@ -25,6 +25,7 @@
     [style.visibility]="isSelf ? 'visible' : 'hidden'"
     mat-icon-button
     [matMenuTriggerFor]="actionsMenu"
+    (click)="$event.stopPropagation()"
   >
     <mat-icon class="mdi-dots-vertical"></mat-icon>
   </button>
