--- a/src/app/security-group/sg-list-item/row-item/security-group-row-item.component.html
+++ b/src/app/security-group/sg-list-item/row-item/security-group-row-item.component.html
@@ -1,5 +1,5 @@
 <mat-list-item
-  (click)="handleClick($event)"
+  (click)="handleClick()"
   [class.card-selected]="isSelected(item)"
   class="entity-list-item"
 >
@@ -20,7 +20,7 @@
     <span [innerHTML]="item.description | highlight:query"></span>
   </div>
 
-  <button mat-icon-button [matMenuTriggerFor]="actionsMenu">
+  <button mat-icon-button [matMenuTriggerFor]="actionsMenu" (click)="$event.stopPropagation()">
     <mat-icon class="mdi-dots-vertical"></mat-icon>
   </button>
 
