--- a/src/app/snapshot/components/vm-snapshot-list-view/vm-snapshot-list-view.component.html
+++ b/src/app/snapshot/components/vm-snapshot-list-view/vm-snapshot-list-view.component.html
@@ -1,7 +1,7 @@
 <mat-list-item
   class="entity-list-item"
   [class.card-selected]="isSelected(item)"
-  (click)="onSelect($event)"
+  (click)="onSelect()"
 >
   <cs-square-state-indicator
     class="entity-list-item-status-indicator"
@@ -21,7 +21,7 @@
     {{ 'SNAPSHOT_PAGE.CARD.CREATED' | translate }}: {{ item.created | csStringifyDate }}
   </div>
 
-  <button mat-icon-button [mat-menu-trigger-for]="actionsMenu">
+  <button mat-icon-button [mat-menu-trigger-for]="actionsMenu" (click)="$event.stopPropagation()">
     <mat-icon class="mdi-dots-vertical"></mat-icon>
   </button>
 
