--- a/src/app/snapshot/snapshots-page/snapshot-list-item/snapshot-list-item.component.html
+++ b/src/app/snapshot/snapshots-page/snapshot-list-item/snapshot-list-item.component.html
@@ -1,5 +1,5 @@
 <mat-list-item
-  (click)="handleClick($event)"
+  (click)="handleClick()"
   [class.card-selected]="isSelected(item)"
   class="entity-list-item"
 >
@@ -22,7 +22,7 @@
    <span [innerHTML]="snapshotCreated | csStringifyDate"></span>
   </div>
 
-  <button mat-icon-button [matMenuTriggerFor]="actionsMenu">
+  <button mat-icon-button [matMenuTriggerFor]="actionsMenu" (click)="$event.stopPropagation()">
     <mat-icon class="mdi-dots-vertical"></mat-icon>
   </button>
 
