feat(vm-snapshots): implement vm snapshots details sidebar (#1454)
PR Close #1332

--- a/src/app/snapshot/snapshots-page/snapshot-sidebar/snapshot-sidebar.component.html
+++ b/src/app/snapshot/snapshots-page/snapshot-sidebar/snapshot-sidebar.component.html
@@ -1,12 +1,12 @@
 <div *ngIf="snapshot">
   <div class="title-container">
     <h4 class="details-header">
-      <span
-        class="state-icon"
+      <cs-round-state-indicator
+        [state]="statusClass"
         [matTooltip]="stateTranslations[snapshot.state] | translate"
-        [ngClass]="statusClass"
-      ></span>
-      <span>{{ snapshot.name }}</span></h4>
+      ></cs-round-state-indicator>
+      <span>{{ snapshot.name }}</span>
+    </h4>
     <div class="vm-actions-container">
       <button
         class="vm-actions-button"
