--- a/src/app/snapshot/components/vm-snapshot-card-view/vm-snapshot-card-view.component.html
+++ b/src/app/snapshot/components/vm-snapshot-card-view/vm-snapshot-card-view.component.html
@@ -1,4 +1,8 @@
-<mat-card class="entity-card">
+<mat-card
+  class="entity-card"
+  [class.card-selected]="isSelected(item)"
+  (click)="onSelect()"
+>
   <mat-card-header class="entity-card-header">
     <cs-round-state-indicator
       class="entity-card-thumbnail"
@@ -8,7 +12,7 @@
     <mat-card-title class="entity-card-title" [matTooltip]="item.name">
       <span>{{ item.name }}</span>
     </mat-card-title>
-    <button mat-icon-button [mat-menu-trigger-for]="actionsMenu" class="entity-card-menu">
+    <button mat-icon-button [mat-menu-trigger-for]="actionsMenu" class="entity-card-menu" (click)="$event.stopPropagation()">
       <mat-icon class="mdi-dots-vertical"></mat-icon>
     </button>
   </mat-card-header>
