fix(notifications): reset position

--- a/src/app/shared/components/top-bar/top-bar.component.html
+++ b/src/app/shared/components/top-bar/top-bar.component.html
@@ -4,6 +4,7 @@
   </div>
   <cs-notification-box
     class="top-bar-notifications"
+    [style.right.px]="rightIndent"
     [class.sidebar-open]="sidebarOpen"
   ></cs-notification-box>
 </div>
