--- a/src/app/vm/vm-sidebar/vm-detail/detail/vm-detail.component.html
+++ b/src/app/vm/vm-sidebar/vm-detail/detail/vm-detail.component.html
@@ -1,7 +1,9 @@
 <mat-card class="vm-card">
   <mat-card-header>
     <mat-card-title>
-      <h2 class="mat-card-title-text">{{ 'VM_PAGE.VM_DETAILS.DETAILS.TITLE' | translate }}</h2>
+      <h2 class="mat-card-title-text">
+        {{ 'VM_PAGE.VM_DETAILS.DETAILS.TITLE' | translate }}
+      </h2>
     </mat-card-title>
   </mat-card-header>
   <mat-card-content class="mat-card-content-with-actions">
@@ -11,7 +13,9 @@
         <div
           class="ellipsis-overflow"
           [matTooltip]="vm?.name"
-        >{{ vm?.name }}</div>
+        >
+          {{ vm?.name }}
+        </div>
       </div>
 
       <div class="row">
@@ -19,7 +23,18 @@
         <div
           class="ellipsis-overflow"
           [matTooltip]="vm?.zonename"
-        >{{ vm?.zonename }}</div>
+        >
+          {{ vm?.zonename }}
+        </div>
+      </div>
+
+      <div class="row">
+        <div>{{ 'VM_PAGE.VM_DETAILS.DETAILS.UUID' | translate }}</div>
+        <div
+          class="ellipsis-overflow"
+          [matTooltip]="vm?.id"
+        >
+          {{ vm?.id }}</div>
       </div>
     </div>
   </mat-card-content>
