--- a/src/app/vm/vm-sidebar/vm-detail/detail/vm-detail.component.html
+++ b/src/app/vm/vm-sidebar/vm-detail/detail/vm-detail.component.html
@@ -1,25 +1,41 @@
 <mat-card class="vm-card">
   <mat-card-header>
     <mat-card-title>
-      <h2 class="mat-card-title-text">{{ 'VM_PAGE.VM_DETAILS.DETAILS.TITLE' | translate }}</h2>
+      <h2 class="mat-card-title-text">
+        {{ 'VM_PAGE.VM_DETAILS.DETAILS.TITLE' | translate }}
+      </h2>
     </mat-card-title>
   </mat-card-header>
   <mat-card-content class="mat-card-content-with-actions">
-    <div class="grid details mat-card-content-container">
+    <div *ngIf="vm" class="grid details mat-card-content-container">
       <div class="row">
         <div>{{ 'VM_PAGE.VM_DETAILS.DETAILS.HOST_NAME' | translate }}</div>
         <div
           class="ellipsis-overflow"
-          [matTooltip]="vm?.name"
-        >{{ vm?.name }}</div>
+          [matTooltip]="vm.name"
+        >
+          {{ vm.name }}
+        </div>
       </div>
 
       <div class="row">
         <div>{{ 'VM_PAGE.VM_DETAILS.DETAILS.ZONE' | translate }}</div>
         <div
           class="ellipsis-overflow"
-          [matTooltip]="vm?.zonename"
-        >{{ vm?.zonename }}</div>
+          [matTooltip]="vm.zonename"
+        >
+          {{ vm.zonename }}
+        </div>
+      </div>
+
+      <div class="row">
+        <div>{{ 'VM_PAGE.VM_DETAILS.DETAILS.ID' | translate }}</div>
+        <div
+          class="ellipsis-overflow"
+          [matTooltip]="vm.id"
+        >
+          {{ vm.id }}
+        </div>
       </div>
     </div>
   </mat-card-content>
