--- a/src/app/shared/components/disk-offering/disk-offering-selector/disk-offering-selector.component.html
+++ b/src/app/shared/components/disk-offering/disk-offering-selector/disk-offering-selector.component.html
@@ -3,6 +3,7 @@
   [diskOfferings]="diskOfferings"
   [diskOffering]="diskOffering"
   [availableStorage]="availableStorage"
+  [customDiskOfferingMinSize]="customDiskOfferingMinSize"
   (changed)="changedOffering($event)"
 ></cs-disk-offering-selector-chooser>
 
