--- a/src/app/vm/vm-page/vm-page.component.html
+++ b/src/app/vm/vm-page/vm-page.component.html
@@ -6,6 +6,7 @@
       <cs-vm-filter-container
         [groupings]="groupings"
         [selectedGroupings]="selectedGroupings"
+        [allowedToViewDestroyedVms]="allowedToViewDestroyedVms"
         cs-list
       ></cs-vm-filter-container>
     </cs-top-bar>
