--- a/src/app/vm/vm-sidebar/network-detail/firewall-rules/firewall-rules-detail.component.html
+++ b/src/app/vm/vm-sidebar/network-detail/firewall-rules/firewall-rules-detail.component.html
@@ -6,7 +6,7 @@
     </mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <div class="grid security-group mat-card-content-container">
+    <div class="grid security-group">
       <div class="row"*ngFor="let group of vm.securitygroup">
         <span class="sg-name">{{ group.name }}</span>
         <button
