fix(affinity-groups): don't show filters if no AGs

--- a/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-list/affinity-group-list.component.html
+++ b/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-list/affinity-group-list.component.html
@@ -1,4 +1,4 @@
-<div class="mat-dialog-content" *ngIf="affinityGroups">
+<div class="mat-dialog-content" *ngIf="affinityGroups?.length">
   <table mat-table [dataSource]="affinityGroups">
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> {{ 'AFFINITY_GROUP.NAME' | translate }}</th>
