updates after code review

--- a/src/app/shared/components/volume-snapshot-from-vm-snapshot-dialog/volume-snapshot-from-vm-snapshot-dialog.component.html
+++ b/src/app/shared/components/volume-snapshot-from-vm-snapshot-dialog/volume-snapshot-from-vm-snapshot-dialog.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <h2 mat-dialog-title>{{ 'SNAPSHOT_PAGE.MODALS.TAKE_A_SNAPSHOT' | translate }}</h2>
+  <h2 mat-dialog-title>{{ 'SNAPSHOT_PAGE.MODALS.TAKE_SNAPSHOT' | translate }}</h2>
   <mat-dialog-content>
 
     <mat-form-field>
